deploy/ngsa-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngsa-cosmos
  namespace: ngsa
  labels:
    app.kubernetes.io/name: ngsa-cosmos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngsa-cosmos
  template:
    metadata:
      labels:
        aadpodidbinding: ngsa-aadpodidbinding
        app: ngsa-cosmos
    spec:
      containers:
        - name: app
          image: k3d-registry.localhost:5000/ngsa-app:local
          imagePullPolicy: Always
          args:
          - --prometheus
          - --no-cache
          - --zone
          - dev
          - --region
          - dev
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /version
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 300
            httpGet:
              path: /healthz
              port: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: secrets
              mountPath: "/app/secrets"
            - mountPath: /tmp
              name: tmp
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 10001
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: ngsa-secrets
        - emptyDir: {}
          name: tmp
      nodeSelector:
        agentpool: npuser01

---

apiVersion: v1
kind: Service
metadata:
  name: ngsa-cosmos
  namespace: ngsa
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ngsa-cosmos

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ngsa-cosmos-vs
  namespace: ngsa
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - ngsa-cosmos-dev-dev.dev
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: ngsa-cosmos
