deploy/ngsa-memory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngsa-memory
  namespace: ngsa
  labels:
    app.kubernetes.io/name: ngsa-memory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngsa-memory
  template:
    metadata:
      labels:
        aadpodidbinding: ngsa-aadpodidbinding
        app: ngsa-memory
    spec:
      containers:
        - name: app
          image: k3d-registry.localhost:5000/ngsa-app:local
          imagePullPolicy: Always
          args:
          - --prometheus
          - --zone
          - dev
          - --region
          - dev
          - --in-memory
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /version
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 300
            httpGet:
              path: /healthz
              port: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /tmp
              name: tmp
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 10001
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - emptyDir: {}
          name: tmp

---

apiVersion: v1
kind: Service
metadata:
  name: ngsa-memory
  namespace: ngsa
spec:
  ports:
  - port: 8080
    name: http
    nodePort: 30080
  type: NodePort # For external access (k3d, kind)
  selector:
    app: ngsa-memory

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: ngsa
  name: ngsa-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ngsa-memory-vs
  namespace: ngsa
spec:
  hosts:
  - "*"
  gateways:
  - ngsa-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ngsa-memory
        port:
          number: 8080
